		- Thanks to @liamdawe for reporting.
	Fixed newline after [quote] being stripped.
		- Thanks to @liamdawe for reporting.
	Fixed IE bug loading initially loading shorthand colors.
		- Thanks to @Olive140 for reporting.
	Added bbcodeTrim option.
	Fixed bug with stripWhiteSpace and saved ranges causing a space after the caret to be removed.

Version 1.4.3:
	Added css() method which allows getting/setting inline CSS for the WYSIWYG editor.
	Added Simplified Chinese translation.
		- Thanks to Yorgo for translating.
	Fixed bug with insert() and setting filtering to false.
	Added Travis-CI testing and improved tests
	Fixed bug with emoticons preloading even if disabled.
		- Thanks to @novadk for reporting.
	Fixed error when editor is hidden and autofocus is enabled.
	Fixed bug with insert() removing first or last div even if it has styling.
	Fixed error with IE 8 height.
		- Thanks to @arjunasuresh3 for reporting and fixing.
	Added toBBCode() and fromBBCode() methods.
	Fixed bug with spaces being removed if they are the only content of a tag.
	Renamed Norwegian translation from no-NB to nb-NO.
		- Thanks to @tim-se for reporting
	Fixed bug with jQuery UI dialogs appearing behind the editor.
		- Thanks to @OmarHawk for reporting
	Added toolbarExclude option.
		- Thanks to @tim-se for suggestion
	Fixed bug with unclosed BBCode tags being parsed as if they had a closing tag.
		- Thanks to @KN4CK3R for reporting
	Added Polish translation.
		- Thanks to @TheKerimek for translating
	Fixed bug with IE 10 not being able to select outside of the editor.
		- Thanks to @novadk for reporting
	Added getBody() method which gets the WYSIWYG body node.
		- Thanks to @arjunasuresh3 for adding
	Made selectOuterText() and getOuterText() methods on the rangeHelper accessible.
	Greatly increased the number of tests.
	Improved the XHTML plugin.
	Fixed bug with XHTML plugin outputting <br /> when editor is empty.
		- Thanks to @tim-se for reporting