@@ -32,6 +32,7 @@ Version 1.4.4:
 		- Thanks to @Olive140 for reporting.
 	Added bbcodeTrim option.
 	Fixed bug with stripWhiteSpace and saved ranges causing a space after the caret to be removed.
+	Added spellcheck option to disable the browsers built in spellchecker.
 
 Version 1.4.3:
 	Added css() method which allows getting/setting inline CSS for the WYSIWYG editor.
